--- a/jsconfig.json
+++ b/jsconfig.json
@@ -23,6 +23,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/useMirrorWorld.js"],
   "exclude": ["node_modules"]
 }
