--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@mirrorworld/web3.js": "^1.3.0",
     "autoprefixer": "^10.4.4",
+    "cloudinary": "^1.34.0",
     "heroicons": "^1.0.6",
+    "mongodb": "^5.1.0",
     "next": "12.1.0",
+    "next-connect": "^0.13.0",
     "postcss": "^8.4.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
