--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "next": "12.1.0",
     "next-connect": "^0.13.0",
     "postcss": "^8.4.12",
+    "qrcode.react": "^3.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
