--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qrcode.react": "^3.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.4.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "tailwindcss": "^3.0.23"
