--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.4.12",
     "qrcode.react": "^3.1.0",
     "react": "17.0.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.4.0",
     "react-qr-reader": "^3.0.0-beta-1",
