--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^5.1.0",
     "next": "12.1.0",
     "next-connect": "^0.13.0",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.4.12",
     "qrcode.react": "^3.1.0",
     "react": "17.0.2",
